kubernetes/apps/home-assistant/mosquitto/tcproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/tcproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: mosquitto
  annotations:
    internal.external-dns.kubernetes.io/hostname: mqtt.jetersen.dev
    public.external-dns.kubernetes.io/enabled: "false"
spec:
  parentRefs:
    - name: envoy-proxy
      namespace: kube-system
      sectionName: mqtt
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1883
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/tcproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: mosquitto-websocket
  annotations:
    internal.external-dns.kubernetes.io/enabled: "false"
    public.external-dns.kubernetes.io/enabled: "false"
spec:
  parentRefs:
    - name: envoy-proxy
      namespace: kube-system
      sectionName: mqtt-websocket
  rules:
    - backendRefs:
        - name: mosquitto
          port: 9001
